Fixed image stretching on iOS (I hope)

--- a/css/style.css
+++ b/css/style.css
@@ -96,29 +96,6 @@ h3 {
     font-weight: 300;
     margin: 30px 60px;
 }
-#wall_1 {
-    background: url(../Images/Back-aqua.jpg);
-    background-size: 100% 100%;
-    background-attachment: fixed;
-}
-#wall_2 {
-    background: url(../Images/Back-Jelly.jpg);
-    background-attachment: fixed;
-    background-size: 100% 100%;
-}
-#wall_3 {
-    background: url(../Images/Back-Macro.jpg);
-    background-attachment: fixed;
-    background-size: 100% 100%;
-}
-#wall_4 {
-    background: url(../Images/Back-Land.jpg);
-    background-attachment: fixed;
-    background-size: 100% 100%;
-}
-
-
-
 
 #nav {
     height: 70px;
